[package]
name = "learn-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib/mod.rs"

[dependencies]
chrono = "0.4.23"
kafka = "0.9.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
