[package]
name = "learn-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib/mod.rs"

[dependencies]
chrono = "0.4.23"
colored = "2.0.4"
rand = "0.8.5"
reqwest = "0.11.22"
tokio = { version = "1.34.0", features = ["full"] }
